--- a/attributes.yml
+++ b/attributes.yml
@@ -1,7 +1,13 @@
-ubuntu-13.10-20140106:
+ubuntu-13.10-20140218:
   :roles:
     - ubuntu
   :name: Ubuntu 13.10
-  :version: 20140106
+  :version: 20140218
   :doc_url: http://wiki.joyent.com/jpc2/Ubuntu
 
+ubuntu-12.04-20140218:
+  :roles:
+    - ubuntu
+  :name: Ubuntu 12.04.4 LTS
+  :version: 20140218
+  :doc_url: http://wiki.joyent.com/jpc2/Ubuntu
