--- a/attributes.yml
+++ b/attributes.yml
@@ -2,12 +2,12 @@ ubuntu-13.10-20140218:
   :roles:
     - ubuntu
   :name: Ubuntu 13.10
-  :version: 20140218
-  :doc_url: http://wiki.joyent.com/jpc2/Ubuntu
+  :version: 20140219
+  :doc_url: http://wiki.joyent.com/jpc2/Ubuntu+Certified
 
 ubuntu-12.04-20140218:
   :roles:
     - ubuntu
   :name: Ubuntu 12.04.4 LTS
-  :version: 20140218
-  :doc_url: http://wiki.joyent.com/jpc2/Ubuntu
+  :version: 20140219
+  :doc_url: http://wiki.joyent.com/jpc2/Ubuntu+Certified
