--- a/attributes.yml
+++ b/attributes.yml
@@ -1,13 +1,14 @@
-ubuntu-13.10-20140227:
+ubuntu-14.04-20140326:
   :roles:
     - ubuntu
-  :name: Ubuntu 13.10
-  :version: 20140227
+  :name: Ubuntu Trusty Tahr (development branch)
+  :version: 20140326
   :doc_url: http://wiki.joyent.com/jpc2/Ubuntu+Certified
 
-ubuntu-12.04-20140227:
+ubuntu-14.04-20140313:
   :roles:
     - ubuntu
-  :name: Ubuntu 12.04.4 LTS
-  :version: 20140227
+  :name: Ubuntu Trusty Tahr (development branch)
+  :version: 20140313
   :doc_url: http://wiki.joyent.com/jpc2/Ubuntu+Certified
+
