--- a/attributes.yml
+++ b/attributes.yml
@@ -1,3 +1,10 @@
+ubuntu-12.04-20140408:
+  :roles:
+    - ubuntu
+  :name: Ubuntu 12.04.4 LTS
+  :version: 20140408
+  :doc_url: http://wiki.joyent.com/jpc2/Ubuntu+Certified
+
 ubuntu-14.04-20140326:
   :roles:
     - ubuntu
