--- a/attributes.yml
+++ b/attributes.yml
@@ -1,27 +1,7 @@
-ubuntu-12.04-20140408:
+ubuntu:
   :roles:
     - ubuntu
-  :name: Ubuntu 12.04.4 LTS
-  :version: 20140408
+  :name: Ubuntu 14.04.1 LTS
+  :version: 20140725
   :doc_url: http://wiki.joyent.com/jpc2/Ubuntu+Certified
 
-ubuntu-13.10-20140410:
-  :roles:
-    - ubuntu
-  :name: Ubuntu 13.10
-  :version: 20140410
-  :doc_url: http://wiki.joyent.com/jpc2/Ubuntu+Certified
-
-ubuntu-14.04-20140414:
-  :roles:
-    - ubuntu
-  :name: Ubuntu 14.04 LTS
-  :version: 20140414
-  :doc_url: http://wiki.joyent.com/jpc2/Ubuntu+Certified
-
-ubuntu-14.04-20140416:
-  :roles:
-    - ubuntu
-  :name: Ubuntu 14.04 LTS
-  :version: 20140416
-  :doc_url: http://wiki.joyent.com/jpc2/Ubuntu+Certified
